# metal-csi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  csiclient.dockerfile  csiclient.sh  dist.config.yml  dist.dockerfile  run.sh  xbuild.sh
.github/workflows/: build-artifacts.yml  docker-xbuild.yml  gh-build.yml
driver/: Cargo.toml  build.rs
driver/src/: app.rs  args.rs  config.rs  error.rs  main.rs
driver/src/control/: local.rs  mod.rs  ssh.rs
driver/src/csi/: controller.rs  identity.rs  mod.rs  node.rs
driver/src/csi/controller/: mod.rs
driver/src/csi/identity/: mod.rs
driver/src/csi/node/: mod.rs
driver/src/iscsi/: iscsiadm.rs  mod.rs  targetcli.rs
driver/src/metadata/: mod.rs
driver/src/sock/: mod.rs
driver/src/storage/: iscsi.rs  mod.rs  nfs.rs
driver/src/storage/iscsi/: iscsiadm.rs  mod.rs  options.rs  targetcli.rs
driver/src/storage/mounter/: mod.rs
driver/src/storage/nfs/: mod.rs
driver/src/storage/zfs/: mod.rs
driver/src/util/: filesystem.rs  mod.rs  mount.rs
driver/src/zfs/: mod.rs
